# log_server_project

./: CMakeLists.txt  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt  server.c
k8s/: deployment.yaml
tests/: test_core.c
